--- a/ModPageLib.csproj
+++ b/ModPageLib.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="modinfo.json" />
+    <EmbeddedResource Include="resources/imgs/thumbnail.png" />
     <EmbeddedResource Include="modpage.txt" />
   </ItemGroup>
 </Project>
